# LAME

./: .gitignore  Cargo.toml  README.md  lame.h  test.c  test.so.build  test.txt.lame  test2.txt.lame
src/: h.rs  lib.rs  main.rs
